<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/move"
    tools:context="com.example.user.calendarexemp.DayScheduleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="10dp"
        android:layout_weight="5"
        android:id="@+id/ll_name_master"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNameFirstMaster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="bottom"
            android:text="@string/tvNameFirstMaster" />

        <TextView
            android:id="@+id/tvNameSecondMaster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="bottom"
            android:text="@string/tvNameSecondMaster" />

        <TextView
            android:id="@+id/tvNameThirdMaster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="bottom"
            android:text="@string/tvNameThirdMaster" />

        <TextView
            android:id="@+id/tvNameFourthMaster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="bottom"
            android:text="@string/tvNameFourthMaster" />

        <TextView
            android:id="@+id/tvNameFifthMaster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="bottom"
            android:text="@string/tvNameFifthMaster" />

        <TextView
            android:id="@+id/tvNameSixthMaster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="bottom"
            android:text="@string/tvNameSixthMaster" />

        <TextView
            android:id="@+id/tvNameSeventhMaster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="bottom"
            android:text="@string/tvNameSeventhMaster" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_schedule_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below ="@+id/ll_name_master"
        android:layout_above = "@+id/ll_key_nav"
        android:layout_weight="1">

    </FrameLayout>

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft = "@+id/fragment_schedule_layout"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="5"
        android:id="@+id/ll_key_nav"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>

</RelativeLayout>
